# FUXI-Server-Forensics

./: Project_Summary_Thesis.md  README.md  TODO.md  index.html  package-lock.json  package.json  test.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  vite.config.ts
.trae/documents/: Anti-Trace-Usage-Guide.md  Auto-Cleanup-Summary.md  Continue-P1-Fixes.md  Develop Backend Logic for AgentPanel.md  Develop Batch Question Answering Panel UI.md  Enhance Context Panel with Chinese Prompts and Thinking Process.md  Fix Session Switch Deadlock and Immediate Highlight.md  Fix Sidebar Active State Logic.md  Fix-Major-UX-Issues.md  Fix-Three-Critical-UX-Issues.md  Forensics-Anti-Trace-Enhancement.md  Implement General Information Module for Agent.md  Implement Starry Sky Mode.md  Move General Info to Standalone Sidebar Tab.md  Optimize Agents for Digital Forensics Expertise.md  Per-Session Cache for Command Results.md  Refactor ServerSidebar to _Clean Tech_ Style and Fix Functionality.md  UX-Analysis-Report.md  Upgrade General Info to Intelligent Context Panel.md  (+7 more)
.vercel/: project.json
docs/: component-specs.md  design-system.md  website-refactor-agent-design.md  website-refactor-agent-policy.yaml  website-refactor-agent-system-prompt.md
scripts/: recon-workspace.test.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx  translations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/pentest-tools/: README.md
src-tauri/src/: lib.rs  license.rs  main.rs  recon.rs  updater.rs
(+111 files in other folders)
